--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       - image: cimg/openjdk:8.0.312
-      - image: a4gpa/appium-docker-android:20.04-2021-12-30_01_03_19
+      - image: dasxran/appium-emulator:arm25
       - image: selenium/standalone-chrome:4.1.1-20211217
 
     steps:
