--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       - image: cimg/openjdk:8.0.312
-      - image: filipalex28/android-appium:first
+      - image: tarekomran/android-appium-mvn:latest
       - image: selenium/standalone-chrome:4.1.1-20211217
 
     steps:
