--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 url=http://www.wildberries.ru/
 urlAppium=http://localhost:4723/wd/hub
-appKfc=http://norobot.ru/apps/KFC-7.4.1.apk
+appKfc=https://ru.files.fm/down.php?i=phmzz6vpe
 webdriver.url=http://localhost:4444/wd/hub
