--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 url=http://www.wildberries.ru/
 urlAppium=http://localhost:4723/wd/hub
-appKfc=https://ru.files.fm/down.php?i=phmzz6vpe
+appKfc=https://ru.files.fm/down.php?i=wr6wxqfn6
 webdriver.url=http://localhost:4444/wd/hub
