--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
   build:
     docker:
       - image: cimg/openjdk:8.0.312
+      - image: circleci/android:api-26-node
       - image: appium/appium-emulator:1.1-arsenal
       - image: selenium/standalone-chrome:4.1.1-20211217
 
