--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ test:
     # Run the file with your access key
     - ./BrowserStackLocal $BROWSERSTACK_ACCESS_KEY:
         background: true
+    - run: gradle test
 
 
 
