--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation 'io.appium:java-client:7.6.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
     implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'commons-codec:commons-codec:1.15'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
