--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'commons-codec:commons-codec:1.15'
+    implementation 'com.typesafe:config:1.4.1'
+    implementation 'io.cucumber:cucumber-java:7.2.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
